tests/paczka2/big_fuzzy/84496523.err
Error in line 4: Oju2ekRM A364 44,5
Error in line 7: efHQmnS2uD A72 75,8
Error in line 23: ZYm600f A72 86,0
Error in line 35: 7TsYv S649 8,2
Error in line 40: nuBtH S6L9 58,5
Error in line 47: 7TsYv A735 50,9
Error in line 60: nuBtH A72 42,6
Error in line 66: efHQmnS2uD A72 37,1
Error in line 74: ZYm600f A364 87,7
Error in line 81: nuBtH A72 77,8
Error in line 41: hpIlGK5t A72 208,2
Error in line 72: A735 A735 10,0
Error in line 94: A735 A72 92,9
Error in line 95: A735 A364 45,8
Error in line 93: hpIlGK5t A364 230,8
Error in line 100: hpIlGK5t S649 6,5
Error in line 101: hpIlGK5t A72 94,3
Error in line 104: nuBtH A364 76,7
Error in line 103: hpIlGK5t A735 58,4
Error in line 109: nuBtH S649 10,6
Error in line 130: efHQmnS2uD A364 284,3
Error in line 118: nuBtH A72 27,6
Error in line 133: nuBtH A364 64,6
Error in line 129: 7TsYv A735 62,8
Error in line 148: hpIlGK5t A364 37,2
Error in line 166: nuBtH S649 -5,2
Error in line 152: A735 S649 36,7
Error in line 167: A735 A364 48,7
Error in line 169: 7TsYv A364 18,0
Error in line 187: Oju2ekRM A735 21,6
Error in line 191: ZYm600f A364 42,5
Error in line 194: ZYm600f A364 63,3
Error in line 201: Oju2ekRM A364 110,63
Error in line 196: nuBtH S649 42,7
Error in line 198: Oju2ekRM A364 76,6
Error in line 208: A735 A735 68,
Error in line 207: Oju2ekRM A735 34,8
Error in line 215: A735 A735 33,3
Error in line 227: ZYm600f A364 43,1
Error in line 223: efHQmnS2uD A72 29,1
Error in line 237: ZYm600f S649 15,1
Error in line 238: efHQmnS2uD S649 35,4
Error in line 244: nuBtH S649 81,5
Error in line 248: nuBtH A364 4,6
